--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-$gray: rgba(184, 176, 176, 0.925);
+$gray: rgba(204, 194, 194, 0.925);
 $basic_width: 130px;
 
 * {
@@ -9,63 +9,49 @@ $basic_width: 130px;
 
 .container{
     display: flex;
-}
 
-.button {
-    width: $basic_width;
-    background-color: $gray;
-    padding: 16px;
-    font-size: 16px;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
-}
-
-.content {
-    display: none;
-    position: absolute;
-    width: $basic_width;
-    text-align: center;
-    background-color: gainsboro;
-    z-index: 2;
-
-    a {
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-
-        &:hover {
-            background-color: $gray;
-        }
-    }
-
-    .dropdown{
+    .dropdown {
         position: relative;
         display: inline-block;
+
+        .button {
+            width: $basic_width;
+            background-color: $gray;
+            padding: 16px;
+            font-size: 16px;
+            border-left: 1px solid black;
+            border-right: 1px solid black;
+        }
+
+        .content {
+            display: none;
+            position: absolute;
+            width: $basic_width;
+            text-align: center;
+            background-color: gainsboro;
+            z-index: 2;
+
+            a {
+                color: black;
+                padding: 12px 16px;
+                text-decoration: none;
+                display: block;
+
+                &:hover {
+                    background-color: $gray;
+                }
+            }
+        }
+
     }
+
 }
 
-    .topic1 {
-        &:hover .content1 {
-            display: block;
-        }
-    }
 
-
-    .topic2 {
-        &:hover .content2 {
-            display: block;
-        }
-    }
-
-    .topic3{
-        &:hover .content3{
-            display: block;
-        }
-    }
-
-    .topic4{
-        &:hover .content4{
-            display: block;
+    @for $i from 1 through 4 {
+        .topic#{$i} {
+             &:hover .content#{$i} {
+                 display: block;
+             }
         }
     }
